css/style.css
/* ... */
@media screen and (min-width: 768px) {
  .block-domain__prices {
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  }
}

/*block plans*/
.block-plans .grid {
  gap: 8rem 4rem;
}

.block-plans .card {
  max-width: 300px;
  margin: 0 auto;
}

@media screen and (min-width: 768px) {
  .block-plans .grid--1x3 {
    grid-template-columns: repeat(3, 1fr);
  }
}

/*feature descriptions*/
.details {
  font-weight: 300;
  text-transform: uppercase;
  font-size: 1.7rem !important;
}

/*feature*/
.feature {
  gap: 4rem;
  margin: 4rem;
}

.feature__heading {
  margin: 1rem 0;
}
.feature__image {
  width: 100%;
}
.container .feature__content {
  align-items: center;
}
.block__header-feature {
  text-align: center;
  margin-top: 3rem;
  margin-bottom: 10rem;
}
.block__header-feature .feature__paragraph {
  font-size: 8rem;
}

@media screen and (min-width: 768px) {
  .feature:nth-of-type(even) .feature__content {
    order: 2;
  }
}

/*showcase*/

.ipad__image {
  width: 100%;
}
.ipad__details {
  justify-self: center;
  align-self: center;
  font-weight: 40;
  letter-spacing: 10px;
}
.block--dark .list {
  list-style: none;
  padding-left: 0;
  font-size: 2rem;
  font-weight: 500;
  letter-spacing: 4px;
}
.block--dark h3 {
  margin-bottom: 2rem;
}
.block--dark .media {
  margin-bottom: 4rem;
}

/*footer*/
.footer {
  margin-top: 90%;
}
.footer_details {
  padding-left: 22%;

  display: flex;
  text-wrap: nowrap;
}
.footer_details h5 {
  padding: 3rem;
  color: #000000;
  font-size: 1.4rem;
  letter-spacing: 1rem;
  font-weight: 500;
  text-transform: uppercase;
}
.footer_details h5:hover {
  color: #066408;
  transition: color 0.3s;
}
.monogram {
  scale: 0.6;
  padding-left: 33.33%;
}

.monogram img {
  max-width: 576px;
  height: auto;
}

.footer_branding p {
  text-align: center;
  font-size: 1.3rem;
  letter-spacing: 1rem;
  font-weight: 300;
}

.footer_contacthouse h4 {
  text-align: center;
  font-size: 2.5rem;
  letter-spacing: 1.3rem;
  text-wrap: nowrap;
  margin-bottom: 10%;
}
.contact_modes {
  padding-left: 10%;
  padding-right: 10%;
  display: flex;
  text-align: center;
}
.contact_modes h5 {
  font-size: 1.8rem;
  letter-spacing: 1rem;
}
.house_phone {
  margin-left: 12%;
  text-wrap: nowrap;
}
.house_text {
  margin-left: 12%;
  text-wrap: nowrap;
}
.house_email {
  margin-left: 12%;
  text-wrap: nowrap;
}
.house_phone p {
  font-size: 1.8rem;
  letter-spacing: 0.5rem;
  font-weight: 300;
}
.house_text p {
  font-size: 1.8rem;
  letter-spacing: 0.5rem;
  font-weight: 300;
}
.house_email p {
  font-size: 1.8rem;
  letter-spacing: 0.5rem;
  font-weight: 300;
}

/*Custom features */
.feature1__content h3 {
  letter-spacing: 25px;
  text-align: center;
  margin-top: 20%;
  font-size: 4rem;
}

.feature1__content h4 {
  letter-spacing: 6px;
  opacity: 0.85;
  font-size: 2rem;
  margin-left: 5%;
  text-align: left;
}
.cotton-wreath {
  scale: 0.85;
  justify-self: center;
  align-self: center;
}
/*Premium features */
.feature2__content h3 {
  letter-spacing: 25px;
  text-align: center;
  margin-top: 20%;
  font-size: 4rem;
}

.feature2__content h4 {
  letter-spacing: 6px;
  opacity: 0.85;
  font-size: 2rem;
  text-align: left;
}
.linen-wreath {
  scale: 0.85;
  justify-self: center;
  align-self: center;
}
/*Unique features */
.feature3__content h3 {
  letter-spacing: 25px;
  margin-left: 5%;
  margin-top: 20%;
  font-size: 4rem;
  text-align: center;
}

.feature3__content h4 {
  letter-spacing: 6px;
  opacity: 0.85;
  font-size: 2rem;
  text-align: left;
  margin-left: 5%;
}
.wool-wreath {
  scale: 0.85;
  justify-self: center;
  align-self: center;
}

/*Our Home */
.globequote {
  margin-top: 40rem;
}

.globequote__content h3 {
  letter-spacing: 25px;
  margin-top: 20%;
  font-size: 4rem;
  text-align: center;
}
.globequote__content h4 {
  letter-spacing: 6px;
  opacity: 0.85;
  font-size: 2rem;
  text-align: center;
}
.globequote__content h4:hover {
  transform: scale(1.2);
  transition: 1s ease-in-out;
}
/*triputy scale - small wreaths- three togather*/
.triputy {
  scale: 0.5;
}
/*The house of scion - custom|premium|unique*/
.block__header h2 {
  letter-spacing: 25px;
  font-size: 5rem;
  padding-top: 10rem;
}
.block__header h3 {
  letter-spacing: 10px;
  font-size: 3.5rem;
}

/*founder message page*/

.founder_message {
  margin-top: 4rem;
}

/*founder_message1*/
.founder_message1 h3 {
  letter-spacing: 25px;
  text-align: center;
  margin-top: 40%;
  font-size: 4rem;
}

.founder_submessage1 h4 {
  letter-spacing: 15px;
  text-align: center;
  margin-top: 20%;
  font-size: 3rem;
  color: #000000;
}

.founder_submessage1 h5 {
  letter-spacing: 2px;
  opacity: 0.85;
  font-size: 1.7rem;
  font-weight: 300;
  margin-left: 5%;
  margin-right: 5%;
  text-align: left;
}
/*founder_message2*/
.founder_message2 h3 {
  letter-spacing: 25px;
  text-align: center;
  margin-top: 40%;
  font-size: 4rem;
}

.founder_submessage2 h4 {
  letter-spacing: 15px;
  text-align: center;
  margin-top: 20%;
  font-size: 3rem;
  color: #000000;
}

.founder_submessage2 h5 {
  letter-spacing: 4px;
  opacity: 0.8;
  font-size: 1.7rem;
  font-weight: 300;
  margin-left: 5%;
  text-align: left;
}
/*founder_message3*/

.founder_message3 h3 {
  letter-spacing: 25px;
  text-align: center;
  margin-top: 40%;
  font-size: 4rem;
}

.founder_submessage3 h4 {
  letter-spacing: 15px;
  text-align: center;
  margin-top: 20%;
  font-size: 3rem;
  color: #000000;
}

.founder_submessage3 h5 {
  letter-spacing: 4px;
  opacity: 0.8;
  font-size: 1.7rem;
  font-weight: 300;
  margin-left: 5%;
  margin-right: 5%;
  text-align: left;
}

.ashokchakra {
  margin-top: 5%;
  scale: 0.3;
  opacity: 0.7;
}

.emblom_content h4 {
  letter-spacing: 16px;
  margin-top: 15%;
  margin-bottom: 0;
  text-align: center;
  font-size: 2.55rem !important;
  font-weight: 300;
  color: black;
}
.emblom_content h4 + h4 {
  margin-top: 3.5rem;
}
/*bespoke boutique page*/
.nav men-dropdown li {
  display: flex;
  flex-direction: column;
}
/* ... */

